[package]
name = "bore"
version = "0.1.0"
authors = ["TCY16 <tom@nlnetlabs.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

domain = {git="https://github.com/NLnetLabs/domain.git", branch="main"}
clap = { version = "3.1.18", features = ["derive"] }